--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="conteneur">
-       <header class="header">ngfhn</header> 
-       <nav class="nav">2vbfdbge</nav>
+       <header class="header">francs maçons</header> 
+       <nav class="nav">skibidi</nav>
        <main class="main">
-         <section class="section"></section>
-         <article class="article"></article>
+         <section class="section">backrooms</section>
+         <article class="article">arg de louis</article>
        </main>
-       <aside class="aside"></aside>
+       <aside class="aside">sigma boy</aside>
        <footer class="footer"></footer>
     </div>
 </body>
