--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <div class="conteneur">
-       <header class="header">francs maçons</header> 
-       <nav class="nav">skibidi</nav>
+       <header class="header">Présentation de moi </header> 
+       <nav class="nav">
+        <div class="nav-item"><a href="page1.html">Index</a></div>
+        <div class="nav-item"><a href="page2.html">Horaire</a></div>
+        <div class="nav-item"><a href="page3.html">professions</a></div>
+        <div class="nav-item"><a href="page4.html">Sujet</a></div>
+        <div class="nav-item"><a href="page5.html">Galerie</a></div>
+        <div class="nav-item"><a href="page6.html">Kb2</a></div>
+      </nav>
        <main class="main">
          <section class="section">backrooms</section>
          <article class="article">arg de louis</article>
