--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
         <div class="nav-item"><a href="page6.html">Kb2</a></div>
       </nav>
        <main class="main">
-         <section class="section">backrooms</section>
-         <article class="article">arg de louis</article>
+         <section class="section">
+          <img src="images/images.jpg" alt="Une image">
+         </section>
+         <article class="article">
+          <img src="images/maxresdefault.jpg" alt="">
+         </article>
        </main>
-       <aside class="aside">sigma boy</aside>
+       <aside class="aside">
+       
+       </aside>
        <footer class="footer"></footer>
     </div>
 </body>
