--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       </nav>
        <main class="main">
          <section class="section">
-          <img src="images/images.jpg" alt="Une image">
+          <a href="https://www.youtube.com/watch?v=80lnA51oBHk">
+            <img src="images/images.jpg" alt="Une image">
+
+          </a>
+         
          </section>
          <article class="article">
           <img src="images/maxresdefault.jpg" alt="">
