--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="conteneur">
        <header class="header">Présentation de moi </header> 
        <nav class="nav">
-        <div class="nav-item"><a href="page1.html">Index</a></div>
+        <div class="nav-item"><a href="https://www.youtube.com/watch?v=80lnA51oBHk">Index</a></div>
         <div class="nav-item"><a href="page2.html">Horaire</a></div>
         <div class="nav-item"><a href="page3.html">professions</a></div>
         <div class="nav-item"><a href="page4.html">Sujet</a></div>
@@ -19,11 +19,7 @@
       </nav>
        <main class="main">
          <section class="section">
-          <a href="https://www.youtube.com/watch?v=80lnA51oBHk">
-            <img src="images/images.jpg" alt="Une image">
-
-          </a>
-         
+          <img src="images/images.jpg" alt="Une image">
          </section>
          <article class="article">
           <img src="images/maxresdefault.jpg" alt="">
