--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="conteneur">
-       <header class="header">Présentation de moi </header> 
+       <header class="header">Ma Présentation
+        <img src="images/roxan.jpg" alt="Ma mascotte préférée"></header> 
        <nav class="nav">
-        <div class="nav-item"><a href="https://www.youtube.com/watch?v=80lnA51oBHk">Index</a></div>
+        <div class="nav-item"><a href="https://tiensle.github.io/pfi/">Index</a></div>
         <div class="nav-item"><a href="page2.html">Horaire</a></div>
         <div class="nav-item"><a href="page3.html">professions</a></div>
         <div class="nav-item"><a href="page4.html">Sujet</a></div>
@@ -19,10 +20,19 @@
       </nav>
        <main class="main">
          <section class="section">
-          <img src="images/images.jpg" alt="Une image">
+          <div class="nometcabane">
+         <h3>Samuel Mailhot</h3>
+
+         <img id="photocabane" src="/images/cabanes.jpg" alt="Mon spot préféré">
+        </div>
+           <p>Je suis étudiant en informatique dans le groupe 1 au collège Lionel Groulx au 100 Rue Duquet à Sainte-Thérèse.</p>
+           <p>Si je tombe en amour avec l'informatique, j'aimerais,après ma technique, continuer d'étudier à la polytechnique. Sinon, j'aimerais devenir opérateur de machinerie lourde.
+            Je souhaite continuer à pratiquer du sport et à découvrir le monde.
+           </p>
+        
          </section>
          <article class="article">
-          <img src="images/maxresdefault.jpg" alt="">
+        
          </article>
        </main>
        <aside class="aside">
