--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="nometcabane">
          <h3>Samuel Mailhot</h3>
 
-         <img id="photocabane" src="/images/cabanes.jpg" alt="Mon spot préféré">
+         <img id="photocabane" src="images/cabanes.jpg" alt="Mon spot préféré">
         </div>
            <p>Je suis étudiant en informatique dans le groupe 1 au collège Lionel Groulx au 100 Rue Duquet à Sainte-Thérèse.</p>
            <p>Si je tombe en amour avec l'informatique, j'aimerais,après ma technique, continuer d'étudier à la polytechnique. Sinon, j'aimerais devenir opérateur de machinerie lourde.
@@ -33,7 +33,7 @@
          </section>
          <article class="article">
            <h4>Voici mes projets réalisés en web cette session</h4>
-           
+
          </article>
        </main>
        <aside class="aside">
