--- a/index.html
+++ b/index.html
@@ -32,12 +32,40 @@
         
          </section>
          <article class="article">
-           <h4>Voici mes projets réalisés en web cette session</h4>
+           <h4>Voici mes projets réalisés</h4>
 
+           <div id="conteneurprojets">
+            <div class="projet"><a href="https://tiensle.github.io/TP1/" target="_blank">Tp1</a></div>
+            <div class="projet"><a href="https://tiensle.github.io/tp2/" target="_blank">Tp2</a></div>
+            <div class="projet"><a href="https://tiensle.github.io/septembre-4-conception-web2/" target="_blank">labo1</a></div>
+            <div class="projet"><a href="https://tiensle.github.io/labo2/" target="_blank">labo2</a></div>
+            <div class="projet"><a href="https://tiensle.github.io/Labo3/" target="_blank">labo3</a></div>
+            <div class="projet"><a href="https://tiensle.github.io/labo-4/" target="_blank">labo4</a></div>
+            <div class="projet"><a href="https://tiensle.github.io/labo5/" target="_blank">labo5</a></div>
+          </div>
          </article>
        </main>
        <aside class="aside">
-       
+       <h5>Mes compétences en informatique</h5>
+       <ul>
+        <li class="externe"> connaissances en Web:
+            <ul>
+                <li class="interne" >HTML</li>
+                <li  class="interne">CSS</li>
+            </ul>
+        </li>
+        <li class="externe"> connaissances en Programmation:
+            <ul>
+                <li  class="interne">C#</li>
+            </ul>
+        </li>
+        <li class="externe"> connaissances en Systèmes d'exploitation:
+            <ul>
+                <li  class="interne">Linux</li>
+                <li  class="interne">Windows</li>
+            </ul>
+        </li>
+    </ul>
        </aside>
        <footer class="footer"></footer>
     </div>
