--- a/index.html
+++ b/index.html
@@ -67,7 +67,17 @@
         </li>
     </ul>
        </aside>
-       <footer class="footer"></footer>
+
+       <footer class="footer">
+        <a href="https://tiensle.github.io/labo5/" target="_blank" id="sources">sources</a>
+        <div id="réalisation">
+          
+          réalisé par Samuel Mailhot <br>
+          3 décembre 2024
+        </div>
+        
+
+       </footer>
     </div>
 </body>
 </html>
