--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
        <header class="header">Ma Présentation
         <img src="images/roxan.jpg" alt="Ma mascotte préférée"></header> 
        <nav class="nav">
-        <div class="nav-item"><a href="https://tiensle.github.io/pfi/">Index</a></div>
-        <div class="nav-item"><a href="page2.html">Horaire</a></div>
+        <div class="nav-item"><a href="index.html" target="_self">Index</a></div>
+        <div class="nav-item"><a href="horaire.html" target="_self">Horaire</a></div>
         <div class="nav-item"><a href="page3.html">professions</a></div>
         <div class="nav-item"><a href="page4.html">Sujet</a></div>
         <div class="nav-item"><a href="page5.html">Galerie</a></div>
