--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <nav class="nav">
         <div class="nav-item"><a href="index.html" target="_self">Index</a></div>
         <div class="nav-item"><a href="horaire.html" target="_self">Horaire</a></div>
-        <div class="nav-item"><a href="page3.html">professions</a></div>
+        <div class="nav-item"><a href="professions.html">professions</a></div>
         <div class="nav-item"><a href="page4.html">Sujet</a></div>
         <div class="nav-item"><a href="page5.html">Galerie</a></div>
         <div class="nav-item"><a href="page6.html">Kb2</a></div>
