--- a/professions.html
+++ b/professions.html
@@ -13,7 +13,7 @@
        <nav class="nav">
         <div class="nav-item"><a href="index.html">Index</a></div>
         <div class="nav-item"><a href="horaire.html">Horaire</a></div>
-        <div class="nav-item"><a href="page3.html">professions</a></div>
+        <div class="nav-item"><a href="professions.html" target="_self">professions</a></div>
         <div class="nav-item"><a href="page4.html">Sujet</a></div>
         <div class="nav-item"><a href="page5.html">Galerie</a></div>
         <div class="nav-item"><a href="page6.html">Kb2</a></div>
