sujet et gallerie

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="nav-item"><a href="index.html" target="_self">Index</a></div>
         <div class="nav-item"><a href="horaire.html" target="_self">Horaire</a></div>
         <div class="nav-item"><a href="professions.html" target="_self">professions</a></div>
-        <div class="nav-item"><a href="page4.html">Sujet</a></div>
-        <div class="nav-item"><a href="page5.html">Galerie</a></div>
-        <div class="nav-item"><a href="page6.html">Kb2</a></div>
+        <div class="nav-item"><a href="sujet.html" target="_self">Sujet</a></div>
+        <div class="nav-item"><a href="galerie.html" target="_self">Galerie</a></div>
+        <div class="nav-item"><a href="page6.html" target="_self">Kb2</a></div>
       </nav>
        <main class="main">
          <section class="section">
