--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="nav-item"><a href="professions.html" target="_self">professions</a></div>
         <div class="nav-item"><a href="sujet.html" target="_self">Sujet</a></div>
         <div class="nav-item"><a href="galerie.html" target="_self">Galerie</a></div>
-        <div class="nav-item"><a href="page6.html" target="_self">Kb2</a></div>
+        <div class="nav-item"><a href="kb2plus.html" target="_self">Kb2</a></div>
       </nav>
        <main class="main">
          <section class="section">
