--- a/sujet.html
+++ b/sujet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Présentation</title>
+    <title>Sujet</title>
     <link rel="stylesheet" href="css/stylessujet.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <div class="nav-item"><a href="professions.html" target="_self">professions</a></div>
         <div class="nav-item"><a href="sujet.html" target="_self">Sujet</a></div>
         <div class="nav-item"><a href="galerie.html" target="_self">Galerie</a></div>
-        <div class="nav-item"><a href="page6.html" target="_self">Kb2</a></div>
+        <div class="nav-item"><a href="kb2plus.html" target="_self">Kb2</a></div>
       </nav>
        <main class="main">
          <section class="section">
