test professions telephone

--- a/kb2plus.html
+++ b/kb2plus.html
@@ -65,7 +65,7 @@
        </aside>
 
        <footer class="footer">
-        <a href="https://tiensle.github.io/labo5/" target="_blank" id="sources">sources</a>
+        <a href="sources.html" target="_blank" id="sources">sources</a>
         <div id="réalisation">
           
           réalisé par Samuel Mailhot <br>
