--- a/sujet.html
+++ b/sujet.html
@@ -63,12 +63,17 @@
             </ul>
         </li>
         <li class="externe">LightHeavyweight
-          <ul class="interne">Alex Pereira</ul>
+          <ul> 
+            <li class="interne">Alex Pereira</li>
+
+          </ul>
 
         </li>
         <li class="externe">Heavyweight
-            <ul class="interne">Jon Jones</ul>
-  
+          <ul> 
+            <li class="interne">Jon Jones</li>
+
+          </ul>
           </li>
     </ul>
 
